--- a/src/partials/header-content.hbs
+++ b/src/partials/header-content.hbs
@@ -294,27 +294,12 @@
     <div id="topbar-nav" class="navbar-menu">
 
       <div class="navbar-end">
-        <a href="{{{siteRootPath}}}/product-docs/Releases.html" class="navbar-item">Releases</a>
-        <div class="navbar-item has-dropdown is-hoverable">
-          <span class="navbar-link">DX Core
-            <span class="icon-wrapper"><i class="arrow down"></i></span>
-          </span>
-          <div class="navbar-dropdown">
-            <a href="{{{siteRootPath}}}/product-docs/Getting-started-with-Magnolia.html" class="navbar-item">Get Started</a>
-            <a href="{{{siteRootPath}}}/product-docs/Developing.html" class="navbar-item">Developing</a>
-            <a href="{{{siteRootPath}}}/product-docs/Modules.html" class="navbar-item">Modules</a>
-            <a href="{{{siteRootPath}}}/product-docs/Developing/API.html" class="navbar-item">API</a>
-            <a href="{{{siteRootPath}}}/product-docs/Developing/Templating.html" class="navbar-item">Templating</a>
-            <a href="{{{siteRootPath}}}/product-docs/Apps.html" class="navbar-item">Apps</a>
-            <a href="{{{siteRootPath}}}/product-docs/Connector-Packs.html" class="navbar-item">Connector Packs</a>
-            <a href="{{{siteRootPath}}}/magnolia-cli/4.x/index.html" class="navbar-item">CLI</a>
-            <a href="{{{siteRootPath}}}/product-docs/Special-Features.html" class="navbar-item">Special Features</a>
-          </div>
-        </div>
+        <a href="{{{siteRootPath}}}/product-docs/6.2/" class="navbar-item"><i class="fa fa-list-alt" aria-hidden="true" style="margin-right: 5px;"></i> PaaS Changelog</a>
+        <a href="{{{siteRootPath}}}/product-docs/6.2/" class="navbar-item">DX Core</a>
         {{!-- <a href="{{{siteRootPath}}}/paas/index.html" class="navbar-item">PaaS</a> --}}
         <div class="navbar-item navbar-item--button">
           <span class="control">
-            <a class="button is-primary" href="https://www.magnolia-cms.com/get-started.html" target="_blank">Get Magnolia</a>
+            <a class="button is-primary" href="https://www.magnolia-cms.com/platform/architecture-and-tech-stack/platform-as-a-service.html" target="_blank">Get PaaS</a>
           </span>
         </div>
       </div>
