--- a/src/css/header.css
+++ b/src/css/header.css
@@ -129,6 +129,16 @@ body {
   padding: 0 0.375rem;
 }
 
+.navbar img.rebrand-logo {
+  width: 225px;
+}
+
+@media screen and (max-width: 800px) {
+  .navbar img.rebrand-logo {
+    width: 175px;
+  }
+}
+
 @media screen and (min-width: 1200px) {
   .navbar {
     padding: 0 0.75rem;
