--- a/src/partials/header-content.hbs
+++ b/src/partials/header-content.hbs
@@ -347,15 +347,15 @@
             <span class="icon-wrapper"><i class="arrow down"></i></span>
           </span>
           <div class="navbar-dropdown">
-            <a href="{{{siteRootPath}}}/product-docs/Getting-started-with-Magnolia.html" class="navbar-item">Get Started</a>
-            <a href="{{{siteRootPath}}}/product-docs/Developing.html" class="navbar-item">Developing</a>
-            <a href="{{{siteRootPath}}}/product-docs/Modules.html" class="navbar-item">Modules</a>
-            <a href="{{{siteRootPath}}}/product-docs/Developing/API.html" class="navbar-item">API</a>
-            <a href="{{{siteRootPath}}}/product-docs/Developing/Templating.html" class="navbar-item">Templating</a>
-            <a href="{{{siteRootPath}}}/product-docs/Apps.html" class="navbar-item">Apps</a>
-            <a href="{{{siteRootPath}}}/product-docs/Connector-Packs.html" class="navbar-item">Connector Packs</a>
+            <a href="{{{siteRootPath}}}/product-docs/6.2/Getting-started-with-Magnolia.html" class="navbar-item">Get Started</a>
+            <a href="{{{siteRootPath}}}/product-docs/6.2/Developing.html" class="navbar-item">Developing</a>
+            <a href="{{{siteRootPath}}}/product-docs/6.2/Modules.html" class="navbar-item">Modules</a>
+            <a href="{{{siteRootPath}}}/product-docs/6.2/Developing/API.html" class="navbar-item">API</a>
+            <a href="{{{siteRootPath}}}/product-docs/6.2/Developing/Templating.html" class="navbar-item">Templating</a>
+            <a href="{{{siteRootPath}}}/product-docs/6.2/Apps.html" class="navbar-item">Apps</a>
+            <a href="{{{siteRootPath}}}/product-docs/6.2/Connector-Packs.html" class="navbar-item">Connector Packs</a>
             <a href="{{{siteRootPath}}}/magnolia-cli/4.x/index.html" class="navbar-item">CLI</a>
-            <a href="{{{siteRootPath}}}/product-docs/Special-Features.html" class="navbar-item">Special Features</a>
+            <a href="{{{siteRootPath}}}/product-docs/6.2/Special-Features.html" class="navbar-item">Special Features</a>
           </div>
         </div>
         <a href="{{{siteRootPath}}}/paas/index.html" class="navbar-item">PaaS</a>
@@ -408,15 +408,15 @@
             <span class="icon-wrapper"><i class="arrow down"></i></span>
           </span>
           <div class="navbar-dropdown">
-            <a href="{{{siteRootPath}}}/product-docs/Getting-started-with-Magnolia.html" class="navbar-item">Get Started</a>
-            <a href="{{{siteRootPath}}}/product-docs/Developing.html" class="navbar-item">Developing</a>
-            <a href="{{{siteRootPath}}}/product-docs/Modules.html" class="navbar-item">Modules</a>
-            <a href="{{{siteRootPath}}}/product-docs/Developing/API.html" class="navbar-item">API</a>
-            <a href="{{{siteRootPath}}}/product-docs/Developing/Templating.html" class="navbar-item">Templating</a>
-            <a href="{{{siteRootPath}}}/product-docs/Apps.html" class="navbar-item">Apps</a>
-            <a href="{{{siteRootPath}}}/product-docs/Connector-Packs.html" class="navbar-item">Connector Packs</a>
+            <a href="{{{siteRootPath}}}/product-docs/6.2/Getting-started-with-Magnolia.html" class="navbar-item">Get Started</a>
+            <a href="{{{siteRootPath}}}/product-docs/6.2/Developing.html" class="navbar-item">Developing</a>
+            <a href="{{{siteRootPath}}}/product-docs/6.2/Modules.html" class="navbar-item">Modules</a>
+            <a href="{{{siteRootPath}}}/product-docs/6.2/Developing/API.html" class="navbar-item">API</a>
+            <a href="{{{siteRootPath}}}/product-docs/6.2/Developing/Templating.html" class="navbar-item">Templating</a>
+            <a href="{{{siteRootPath}}}/product-docs/6.2/Apps.html" class="navbar-item">Apps</a>
+            <a href="{{{siteRootPath}}}/product-docs/6.2/Connector-Packs.html" class="navbar-item">Connector Packs</a>
             <a href="{{{siteRootPath}}}/magnolia-cli/4.x/index.html" class="navbar-item">CLI</a>
-            <a href="{{{siteRootPath}}}/product-docs/Special-Features.html" class="navbar-item">Special Features</a>
+            <a href="{{{siteRootPath}}}/product-docs/6.2/Special-Features.html" class="navbar-item">Special Features</a>
           </div>
         </div>
         <a href="{{{siteRootPath}}}/paas/index.html" class="navbar-item">PaaS</a>
@@ -469,15 +469,15 @@
             <span class="icon-wrapper"><i class="arrow down"></i></span>
           </span>
           <div class="navbar-dropdown">
-            <a href="{{{siteRootPath}}}/product-docs/Getting-started-with-Magnolia.html" class="navbar-item">Get Started</a>
-            <a href="{{{siteRootPath}}}/product-docs/Developing.html" class="navbar-item">Developing</a>
-            <a href="{{{siteRootPath}}}/product-docs/Modules.html" class="navbar-item">Modules</a>
-            <a href="{{{siteRootPath}}}/product-docs/Developing/API.html" class="navbar-item">API</a>
-            <a href="{{{siteRootPath}}}/product-docs/Developing/Templating.html" class="navbar-item">Templating</a>
-            <a href="{{{siteRootPath}}}/product-docs/Apps.html" class="navbar-item">Apps</a>
-            <a href="{{{siteRootPath}}}/product-docs/Connector-Packs.html" class="navbar-item">Connector Packs</a>
+            <a href="{{{siteRootPath}}}/product-docs/6.2/Getting-started-with-Magnolia.html" class="navbar-item">Get Started</a>
+            <a href="{{{siteRootPath}}}/product-docs/6.2/Developing.html" class="navbar-item">Developing</a>
+            <a href="{{{siteRootPath}}}/product-docs/6.2/Modules.html" class="navbar-item">Modules</a>
+            <a href="{{{siteRootPath}}}/product-docs/6.2/Developing/API.html" class="navbar-item">API</a>
+            <a href="{{{siteRootPath}}}/product-docs/6.2/Developing/Templating.html" class="navbar-item">Templating</a>
+            <a href="{{{siteRootPath}}}/product-docs/6.2/Apps.html" class="navbar-item">Apps</a>
+            <a href="{{{siteRootPath}}}/product-docs/6.2/Connector-Packs.html" class="navbar-item">Connector Packs</a>
             <a href="{{{siteRootPath}}}/magnolia-cli/4.x/index.html" class="navbar-item">CLI</a>
-            <a href="{{{siteRootPath}}}/product-docs/Special-Features.html" class="navbar-item">Special Features</a>
+            <a href="{{{siteRootPath}}}/product-docs/6.2/Special-Features.html" class="navbar-item">Special Features</a>
           </div>
         </div>
         <a href="{{{siteRootPath}}}/paas/index.html" class="navbar-item">PaaS</a>
@@ -530,15 +530,15 @@
             <span class="icon-wrapper"><i class="arrow down"></i></span>
           </span>
           <div class="navbar-dropdown">
-            <a href="{{{siteRootPath}}}/product-docs/Getting-started-with-Magnolia.html" class="navbar-item">Get Started</a>
-            <a href="{{{siteRootPath}}}/product-docs/Developing.html" class="navbar-item">Developing</a>
-            <a href="{{{siteRootPath}}}/product-docs/Modules.html" class="navbar-item">Modules</a>
-            <a href="{{{siteRootPath}}}/product-docs/Developing/API.html" class="navbar-item">API</a>
-            <a href="{{{siteRootPath}}}/product-docs/Developing/Templating.html" class="navbar-item">Templating</a>
-            <a href="{{{siteRootPath}}}/product-docs/Apps.html" class="navbar-item">Apps</a>
-            <a href="{{{siteRootPath}}}/product-docs/Connector-Packs.html" class="navbar-item">Connector Packs</a>
+            <a href="{{{siteRootPath}}}/product-docs/6.2/Getting-started-with-Magnolia.html" class="navbar-item">Get Started</a>
+            <a href="{{{siteRootPath}}}/product-docs/6.2/Developing.html" class="navbar-item">Developing</a>
+            <a href="{{{siteRootPath}}}/product-docs/6.2/Modules.html" class="navbar-item">Modules</a>
+            <a href="{{{siteRootPath}}}/product-docs/6.2/Developing/API.html" class="navbar-item">API</a>
+            <a href="{{{siteRootPath}}}/product-docs/6.2/Developing/Templating.html" class="navbar-item">Templating</a>
+            <a href="{{{siteRootPath}}}/product-docs/6.2/Apps.html" class="navbar-item">Apps</a>
+            <a href="{{{siteRootPath}}}/product-docs/6.2/Connector-Packs.html" class="navbar-item">Connector Packs</a>
             <a href="{{{siteRootPath}}}/magnolia-cli/4.x/index.html" class="navbar-item">CLI</a>
-            <a href="{{{siteRootPath}}}/product-docs/Special-Features.html" class="navbar-item">Special Features</a>
+            <a href="{{{siteRootPath}}}/product-docs/6.2/Special-Features.html" class="navbar-item">Special Features</a>
           </div>
         </div>
         <a href="{{{siteRootPath}}}/paas/index.html" class="navbar-item">PaaS</a>
