--- a/src/partials/header-content.hbs
+++ b/src/partials/header-content.hbs
@@ -341,7 +341,7 @@
     <div id="topbar-nav" class="navbar-menu">
 
       <div class="navbar-end">
-        <a href="{{{siteRootPath}}}/product-docs/Releases.html" class="navbar-item">Releases</a>
+        <a href="{{{siteRootPath}}}/product-docs/6.2/Releases.html" class="navbar-item">Releases</a>
         <div class="navbar-item has-dropdown is-hoverable">
           <span class="navbar-link">DX Core
             <span class="icon-wrapper"><i class="arrow down"></i></span>
@@ -402,7 +402,7 @@
     <div id="topbar-nav" class="navbar-menu">
 
       <div class="navbar-end">
-        <a href="{{{siteRootPath}}}/product-docs/Releases.html" class="navbar-item">Releases</a>
+        <a href="{{{siteRootPath}}}/product-docs/6.2/Releases.html" class="navbar-item">Releases</a>
         <div class="navbar-item has-dropdown is-hoverable">
           <span class="navbar-link">DX Core
             <span class="icon-wrapper"><i class="arrow down"></i></span>
@@ -463,7 +463,7 @@
     <div id="topbar-nav" class="navbar-menu">
 
       <div class="navbar-end">
-        <a href="{{{siteRootPath}}}/product-docs/Releases.html" class="navbar-item">Releases</a>
+        <a href="{{{siteRootPath}}}/product-docs/6.2/Releases.html" class="navbar-item">Releases</a>
         <div class="navbar-item has-dropdown is-hoverable">
           <span class="navbar-link">DX Core
             <span class="icon-wrapper"><i class="arrow down"></i></span>
@@ -524,7 +524,7 @@
     <div id="topbar-nav" class="navbar-menu">
 
       <div class="navbar-end">
-        <a href="{{{siteRootPath}}}/product-docs/Releases.html" class="navbar-item">Releases</a>
+        <a href="{{{siteRootPath}}}/product-docs/6.2/Releases.html" class="navbar-item">Releases</a>
         <div class="navbar-item has-dropdown is-hoverable">
           <span class="navbar-link">DX Core
             <span class="icon-wrapper"><i class="arrow down"></i></span>
