--- a/src/css/vars.css
+++ b/src/css/vars.css
@@ -24,6 +24,7 @@
   --rebrand-color-primary-teal: #02373f;
   --rebrand-color-primary-sand: #f0eee7;
   --rebrand-color-primary-fresh: #d3f0a5;
+  --rebrand-color-primary-blue: #0067f5;
   --rebrand-color-primary-light-blue: #549afc;
   --rebrand-color-primary-dark-grey: #1e1f1c;
   --rebrand-color-primary-bloom: #f0d3e9;
