--- a/src/layouts/home.hbs
+++ b/src/layouts/home.hbs
@@ -8,9 +8,14 @@
 {{> body-home}}
 <div class="general-announcement">
   <div class="announcement-container">
-    <h1>Check out what's new in <span>Magnolia 6.3</span></h1>
-    <div class="general-center">
-        <a href="https://docs.magnolia-cms.com/product-docs/6.3/features/what-is-new"><button>Magnolia 6.3 <i class="fa fa-rocket" aria-hidden="true"></i> </button></a>
+    <div class="banner-image">
+        <!-- Add your banner image here -->
+    </div>
+    <div class="text-overlay">
+      <h1>Check out what's new in <span>Magnolia 6.3</span></h1>
+      <div class="general-center">
+          <a href="https://docs.magnolia-cms.com/product-docs/6.3/features/what-is-new"><button>Magnolia 6.3 <i class="fa fa-rocket" aria-hidden="true"></i> </button></a>
+      </div>
     </div>
   </div>
 </div>
