--- a/src/css/vars.css
+++ b/src/css/vars.css
@@ -74,7 +74,7 @@
   --navbar-background: white;
   --navbar-font-color: var(--rebrand-color-primary-teal);
   --navbar_hover-background: var(--color-smoke-90);
-  --navbar-button-background: var(--rebrand-color-primary-green);
+  --navbar-button-background: var(--color-digital-blue);
   --navbar-button-border-color: var(--panel-border-color);
   --navbar-button-font-color: var(--body-font-color);
   --navbar-menu-border-color: var(--panel-border-color);
