landing page updates for rebrand

--- a/src/layouts/new-home.hbs
+++ b/src/layouts/new-home.hbs
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Magnolia DXP Documentation</title>
   <link rel="stylesheet" href="https://unpkg.com/bulma@1.0.0/css/bulma.min.css">
   <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
     integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
@@ -51,7 +51,7 @@
     }
 
     h1.title.titled {
-      color: var(--rebrand-color-primary-fresh) !important;
+      color: #d3f0a5 !important;
       line-height: 1.1 !important;
     }
 
@@ -60,12 +60,12 @@
     }
     
     button.button {
-      background-color: var(--color-digital-blue) !important;
+      background-color: #0569f9 !important;
       transition: 0.3s ease;
     }
 
     button.button:hover {
-      background-color: var(--color-digital-blue) !important;
+      background-color: #0569f9 !important;
     }
 
     .navbar-item {
@@ -78,11 +78,11 @@
     }
 
     a.navbar-item {
-      color: var(--rebrand-color-primary-teal)!important;
+      color: #02373f !important;
     }
 
     a.navbar-item:hover {
-      color: var(--color-digital-blue) !important;
+      color: #0569f9 !important;
       background-color: transparent !important;
     }
 
@@ -91,11 +91,11 @@
     }
 
     #hero-header {
-      color: var(--rebrand-color-primary-fresh) !important;
+      color: #d3f0a5 !important;
     }
 
     div.hero-body {
-      background-color: var(--rebrand-color-primary-teal) !important;
+      background-color: #02373f !important;
     }
 
     #get-to-know-magnolia {
@@ -106,24 +106,24 @@
     footer button {
       background-color: transparent !important;
       transition: 0.3s ease;
-      border: 1px solid var(--color-digital-blue) !important;;
+      border: 1px solid #0569f9 !important;;
       padding: 5px;
-      color: var(--rebrand-color-primary-teal);
+      color: #02373f;
       margin-top: 5px;
     }
 
     footer button i {
-      color: var(--color-digital-blue) !important;
+      color: #0569f9 !important;
     }
 
     a.button {
-      background-color: var(--color-digital-blue) !important;
+      background-color: #0569f9 !important;
       color: whitesmoke;
       text-decoration: none !important;
     }
 
     span#typewriter {
-      color: var(--rebrand-color-primary-sand);
+      color: #f0eee7 !important;
     }
     
   </style>
@@ -141,7 +141,7 @@
     <div class="navbar-menu">
 
       <div class="navbar-end">
-        <a class="navbar-item" href="https://preview-magnolia-63.netlify.app/product-docs/6.3/releases">
+        <a class="navbar-item" href="https://docs.magnolia-cms.com/product-docs/6.2/releases/">
           DX Core Releases
         </a>
 
