--- a/src/css/header.css
+++ b/src/css/header.css
@@ -16,7 +16,8 @@ body {
   width: 100%;
   word-wrap: break-word;
   z-index: var(--z-index-navbar);
-  box-shadow: 0 4px 8px rgba(30, 31, 28, 0.25);
+  /* box-shadow: 0 4px 8px rgba(30, 31, 28, 0.25); */
+  border-bottom: 1px solid darkgrey;
 }
 
 #topbar {
@@ -32,13 +33,13 @@ body {
   font-size: larger;
 }
 
-.navbar.paas-nav {
+/* .navbar.paas-nav {
   box-shadow: 0 -13px 33px var(--color-primary-ocean-blue);
-}
+} */
 
-.navbar.headless-nav {
+/* .navbar.headless-nav {
   box-shadow: 0 -13px 33px var(--color-orange);
-}
+} */
 
 .navbar.headless-nav .navbar-item {
   color: #1e1f1c;
@@ -149,6 +150,7 @@ body {
     color: var(--color-gray-dark);
     transition: 0.2s ease;
     outline: none;
+    font-size: large;
   }
 
   .navbar-end > a.navbar-item:hover,
