--- a/src/layouts/new-home.hbs
+++ b/src/layouts/new-home.hbs
@@ -103,19 +103,6 @@
       opacity: 0.1 !important;
     }
 
-    footer button {
-      background-color: transparent !important;
-      transition: 0.3s ease;
-      border: 1px solid #0569f9 !important;;
-      padding: 5px;
-      color: #02373f;
-      margin-top: 5px;
-    }
-
-    footer button i {
-      color: #0569f9 !important;
-    }
-
     a.button {
       background-color: #0569f9 !important;
       color: whitesmoke;
@@ -124,6 +111,10 @@
 
     span#typewriter {
       color: #f0eee7 !important;
+    }
+
+    .footer {
+      border-top: 3px solid #068449 !important;
     }
     
   </style>
