--- a/src/partials/footer-content.hbs
+++ b/src/partials/footer-content.hbs
@@ -1,5 +1,6 @@
 <div class="col">
   <ul>
+    <li class="list-topic">Product</li>
     <li><a href="https://www.magnolia-cms.com/get-started/developer-trial.html" target="_blank" rel="noopener">Developer Trial</a></li>
     <li><a href="https://docs.magnolia-cms.com/incubator-modules/index.html">Incubator Modules</a></li>
     <li><a href="https://marketplace.magnolia-cms.com/" target="_blank">Magnolia Marketplace</a></li>
@@ -9,7 +10,7 @@
 </div>
 <div class="col">
   <ul>
-    
+    <li class="list-topic">Services</li>
     <li><a href="https://www.magnolia-cms.com/services.html" target="_blank" rel="noopener">Professional Services</a></li>
     <li><a href="https://www.magnolia-cms.com/services/education/academy.html" target="_blank" rel="noopener">Magnolia Academy</a></li>
     <li><a href="https://www.magnolia-cms.com/services/education/training.html" target="_blank" >Training</a></li>
@@ -19,12 +20,13 @@
 </div>
 <div class="col">
   <ul>
+    <li class="list-topic">Resources</li>
     <li><a href="https://www.magnolia-cms.com/library.html" target="_blank" >Magnolia Resources</a></li>
     <li><a href="https://www.magnolia-cms.com/blog.html" target="_blank" >Magnolia Blog</a></li>
     <li><a href="https://www.magnolia-cms.com/library/videos.html" target="_blank" >Magnolia Videos</a></li>
     <li><a href="https://www.magnolia-cms.com/email/newsletter.html" target="_blank" >Newsletter</a></li>
     <li><a href="https://www.magnolia-cms.com/about/careers.html" target="_blank" >Careers - Join us!</a></li>
-  
+
   </ul>
 </div>
 
