small ui updates

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -269,7 +269,7 @@ footer.DocSearch-Footer div.DocSearch-Logo a {
 }
 
 .DocSearch-Hits mark {
-  color: var(--color-primary-yellow) !important;
+  color: var(--color-digital-blue) !important;
 }
 
 .DocSearch-Container {
