small update on landing page

--- a/src/layouts/new-home.hbs
+++ b/src/layouts/new-home.hbs
@@ -197,8 +197,7 @@
               Dedicated developer docs
             </h1> --}}
             <h2 class="subtitled subtitle">
-              Whether you're an existing customer or partner looking to learn more, or entirely new to the Magnolia experience.
-              Take a look at our docs to learn more about our Magnolia product offerings.
+              Whether you're an existing customer or partner looking to learn more, or entirely new to the Magnolia experience, take a look at our docs to learn more about our Magnolia product offerings.
             </h2>
             <div class="buttons">
               <a class="button" href="https://docs.magnolia-cms.com/product-docs/6.2/">DX Core on-prem</a>
