--- a/src/layouts/default.hbs
+++ b/src/layouts/default.hbs
@@ -15,5 +15,8 @@
 {{> location}}
 {{> countdown}}
 {{> tableSort}}
+{{!-- {{#if (eq page.componentVersion.displayVersion '6.3 Beta')}} --}}
+{{> badge}}
+{{!-- {{/if}} --}}
   </body>
 </html>
