--- a/src/layouts/default.hbs
+++ b/src/layouts/default.hbs
@@ -15,8 +15,8 @@
 {{> location}}
 {{> countdown}}
 {{> tableSort}}
-{{!-- {{#if (eq page.componentVersion.displayVersion '6.3 Beta')}}
+{{#if (eq page.componentVersion.displayVersion '6.3 Beta')}}
 {{> badge}}
-{{/if}} --}}
+{{/if}}
   </body>
 </html>
