--- a/src/css/doc.css
+++ b/src/css/doc.css
@@ -294,7 +294,7 @@
 
 .doc .admonitionblock td.content {
   padding: 1.2rem 1rem 1.3rem;
-  background: var(--color-smoke-50);
+  background: var(--rebrand-color-primary-sand);
   width: 100%;
 }
 
