--- a/src/partials/header-content.hbs
+++ b/src/partials/header-content.hbs
@@ -296,7 +296,7 @@
     <div id="topbar-nav" class="navbar-menu">
 
       <div class="navbar-end">
-        <a href="{{{siteRootPath}}}/paas/changelog/" class="navbar-item"><i class="fa fa-list-alt" aria-hidden="true" style="margin-right: 5px;"></i> PaaS Changelog</a>
+        <a href="{{{siteRootPath}}}/paas/changelog/" class="navbar-item"><i class="fa fa-list-alt" aria-hidden="true" style="margin-right: 5px;"></i> Changelog</a>
         <a href="{{{siteRootPath}}}/product-docs/6.2/" class="navbar-item">DX Core</a>
         {{!-- <a href="{{{siteRootPath}}}/paas/index.html" class="navbar-item">PaaS</a> --}}
         <div class="navbar-item navbar-item--button">
