--- a/src/layouts/new-home.hbs
+++ b/src/layouts/new-home.hbs
@@ -137,7 +137,7 @@
         </a>
 
         <a class="navbar-item" href="https://docs.magnolia-cms.com/paas/">
-          Magnolia PaaS
+          DX Cloud PaaS
         </a>
 
         {{!-- <a class="navbar-item" href="https://www.magnolia-cms.com/get-started/demo.html" target="_blank">
@@ -200,8 +200,8 @@
               Whether you're an existing customer or partner looking to learn more, or entirely new to the Magnolia experience, take a look at our docs to learn more about our Magnolia product offerings.
             </h2>
             <div class="buttons">
-              <a class="button" href="https://docs.magnolia-cms.com/product-docs/6.2/">DX Core on-prem</a>
-              <a class="button" href="https://docs.magnolia-cms.com/paas/">Magnolia PaaS</a>
+              <a class="button" href="https://docs.magnolia-cms.com/product-docs/6.2/">DX Core</a>
+              <a class="button" href="https://docs.magnolia-cms.com/paas/">DX Cloud PaaS</a>
             </div>
           </div>
 
